--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,8 +24,8 @@ allprojects {
 }
 
 ext {
-    roomVersion = '2.2.0-rc01'
-    archLifecycleVersion = '2.2.0-alpha05'
+    roomVersion = '2.2.1'
+    archLifecycleVersion = '2.2.0-rc02'
     androidxArchVersion = '2.1.0'
     coroutines = '1.3.1'
 }
